provisioning/roles/iptables-proxy/templates/iptables.rules
# Generated by iptables-save v1.4.7 on Thu Dec  5 14:48:05 2013
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 192.168.100.222 -p tcp -m state --state NEW -m tcp --dport 11211 -j ACCEPT 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 172.16.0.0/12 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 22 -j ACCEPT 
COMMIT
# Completed on Thu Dec  5 14:48:05 2013
